runFormatTest(import.meta, ["markdown"], { checkIgnorePragma: true });
